--- a/client/package.json
+++ b/client/package.json
@@ -5,7 +5,11 @@
   "dependencies": {
     "@ckeditor/ckeditor5-build-classic": "^33.0.0",
     "@ckeditor/ckeditor5-code-block": "^33.0.0",
+    "@ckeditor/ckeditor5-font": "^33.0.0",
     "@ckeditor/ckeditor5-react": "^4.0.0",
+    "@emotion/react": "^11.8.2",
+    "@emotion/styled": "^11.8.1",
+    "@mui/material": "^5.5.1",
     "@testing-library/jest-dom": "^5.16.2",
     "@testing-library/react": "^12.1.4",
     "@testing-library/user-event": "^13.5.0",
