--- a/client/package.json
+++ b/client/package.json
@@ -9,6 +9,7 @@
     "antd": "^4.19.2",
     "axios": "^0.26.1",
     "cors": "^2.8.5",
+    "html-react-parser": "^1.4.8",
     "node-html-parser": "^5.3.3",
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
