--- a/client/package.json
+++ b/client/package.json
@@ -5,8 +5,10 @@
   "dependencies": {
     "@ckeditor/ckeditor5-build-classic": "^33.0.0",
     "@ckeditor/ckeditor5-code-block": "^33.0.0",
+    "@ckeditor/ckeditor5-dev-utils": "^28.1.1",
     "@ckeditor/ckeditor5-font": "^33.0.0",
     "@ckeditor/ckeditor5-react": "^4.0.0",
+    "@ckeditor/ckeditor5-theme-lark": "^33.0.0",
     "@emotion/react": "^11.8.2",
     "@emotion/styled": "^11.8.1",
     "@mui/material": "^5.5.1",
@@ -18,8 +20,8 @@
     "cors": "^2.8.5",
     "html-react-parser": "^1.4.8",
     "node-html-parser": "^5.3.3",
-    "react": "^17.0.2",
-    "react-dom": "^17.0.2",
+    "postcss-loader": "^4.3.0",
+    "raw-loader": "^4.0.2",
     "react-html-parser": "^2.0.2",
     "react-router-dom": "^6.2.2",
     "react-scripts": "5.0.0",
@@ -27,9 +29,9 @@
   },
   "scripts": {
     "start": "react-scripts start",
-    "build": "react-scripts build",
     "test": "react-scripts test",
-    "eject": "react-scripts eject"
+    "eject": "react-scripts eject",
+    "build": "webpack --mode development"
   },
   "eslintConfig": {
     "extends": [
@@ -48,5 +50,24 @@
       "last 1 firefox version",
       "last 1 safari version"
     ]
+  },
+  "devDependencies": {
+    "@babel/core": "^7.17.7",
+    "@babel/preset-env": "^7.16.11",
+    "@babel/preset-react": "^7.16.7",
+    "babel-loader": "^8.2.3",
+    "clean-webpack-plugin": "^4.0.0",
+    "css-loader": "^6.7.1",
+    "html-loader": "^3.1.0",
+    "html-webpack-plugin": "^5.5.0",
+    "mini-css-extract-plugin": "^2.6.0",
+    "node-sass": "^7.0.1",
+    "react": "^17.0.2",
+    "react-dom": "^17.0.2",
+    "sass-loader": "^12.6.0",
+    "style-loader": "^3.3.1",
+    "webpack": "^5.70.0",
+    "webpack-cli": "^4.9.2",
+    "webpack-dev-server": "^4.7.4"
   }
 }
