--- a/server/package.json
+++ b/server/package.json
@@ -14,6 +14,7 @@
     "concurrently": "^7.0.0",
     "cors": "^2.8.5",
     "express": "^4.17.3",
+    "multer": "^1.4.4",
     "mysql": "^2.18.1",
     "node": "^17.7.1",
     "nodemon": "^2.0.15"
