--- a/.gitignore
+++ b/.gitignore
@@ -10,6 +10,7 @@
 
 # production
 /build
+client/build
 
 # misc
 .DS_Store
@@ -24,3 +25,6 @@ yarn-error.log*
 
 client/node_modules
 server/node_modules
+
+# debugger
+.vscode
