--- a/client/package.json
+++ b/client/package.json
@@ -19,6 +19,7 @@
     "ckeditor5": "^33.0.0",
     "cors": "^2.8.5",
     "html-react-parser": "^1.4.8",
+    "multer": "^1.4.4",
     "node-html-parser": "^5.3.3",
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
