--- a/client/package.json
+++ b/client/package.json
@@ -18,6 +18,7 @@
     "buffer": "^6.0.3",
     "ckeditor5": "^33.0.0",
     "cors": "^2.8.5",
+    "highlight.js": "^11.5.0",
     "html-react-parser": "^1.4.8",
     "multer": "^1.4.4",
     "node-html-parser": "^5.3.3",
