--- a/server/package.json
+++ b/server/package.json
@@ -19,7 +19,9 @@
     "dotenv": "^16.0.0",
     "express": "^4.17.3",
     "http-proxy-middleware": "^2.0.4",
+    "iconv-lite": "^0.6.3",
     "jsonwebtoken": "^8.5.1",
+    "mime": "^3.0.0",
     "multer": "^1.4.4",
     "mysql": "^2.18.1",
     "node": "^17.7.1",
