--- a/server/package.json
+++ b/server/package.json
@@ -11,6 +11,7 @@
   "license": "ISC",
   "dependencies": {
     "bcrypt": "^5.0.1",
+    "bcryptjs": "^2.4.3",
     "body-parser": "^1.19.2",
     "buffer-from": "^1.1.2",
     "concurrently": "^7.0.0",
@@ -23,7 +24,8 @@
     "multer": "^1.4.4",
     "mysql": "^2.18.1",
     "node": "^17.7.1",
-    "nodemon": "^2.0.15"
+    "nodemon": "^2.0.15",
+    "uuid": "^8.3.2"
   },
   "description": ""
 }
