--- a/client/package.json
+++ b/client/package.json
@@ -22,6 +22,7 @@
     "html-react-parser": "^1.4.8",
     "node-html-parser": "^5.3.3",
     "react": "^17.0.2",
+    "react-device-detect": "^2.1.2",
     "react-dom": "^17.0.2",
     "react-html-parser": "^2.0.2",
     "react-redux": "^7.2.6",
