--- a/server/package.json
+++ b/server/package.json
@@ -28,6 +28,8 @@
     "mysql": "^2.18.1",
     "node": "^17.7.1",
     "nodemon": "^2.0.15",
+    "react-cookies": "^0.1.1",
+    "sequelize": "^6.17.0",
     "uuid": "^8.3.2"
   },
   "description": ""
