--- a/server/package.json
+++ b/server/package.json
@@ -11,7 +11,6 @@
   "license": "ISC",
   "dependencies": {
     "bcrypt": "^5.0.1",
-    "bcryptjs": "^2.4.3",
     "body-parser": "^1.19.2",
     "buffer-from": "^1.1.2",
     "concurrently": "^7.0.0",
@@ -28,9 +27,8 @@
     "mysql": "^2.18.1",
     "node": "^17.7.1",
     "nodemon": "^2.0.15",
-    "react-cookies": "^0.1.1",
-    "sequelize": "^6.17.0",
-    "uuid": "^8.3.2"
+    "react-cookie": "^4.1.1",
+    "sequelize": "^6.17.0"
   },
   "description": ""
 }
