--- a/server/package.json
+++ b/server/package.json
@@ -18,7 +18,6 @@
     "cors": "^2.8.5",
     "dotenv": "^16.0.0",
     "express": "^4.17.3",
-    "express-session": "^1.17.2",
     "http-proxy-middleware": "^2.0.4",
     "iconv-lite": "^0.6.3",
     "jsonwebtoken": "^8.5.1",
@@ -26,9 +25,7 @@
     "multer": "^1.4.4",
     "mysql": "^2.18.1",
     "node": "^17.7.1",
-    "nodemon": "^2.0.15",
-    "react-cookie": "^4.1.1",
-    "sequelize": "^6.17.0"
+    "nodemon": "^2.0.15"
   },
   "description": ""
 }
