--- a/server/package.json
+++ b/server/package.json
@@ -7,6 +7,7 @@
     "test": "nodemon index.js",
     "dev": "concurrently \"npm run test\" \"npm start --prefix ../client\""
   },
+  "proxy": "http://localhost:8000/",
   "author": "",
   "license": "ISC",
   "dependencies": {
