--- a/client/package.json
+++ b/client/package.json
@@ -18,17 +18,22 @@
     "axios": "^0.26.1",
     "buffer": "^6.0.3",
     "ckeditor5": "^33.0.0",
+    "copy-descriptor": "^0.1.1",
     "cors": "^2.8.5",
+    "ee-first": "^1.1.1",
+    "electron-to-chromium": "^1.4.92",
+    "emoji-regex": "^10.0.1",
     "highlight.js": "^11.5.0",
     "html-react-parser": "^1.4.8",
     "node-html-parser": "^5.3.3",
-    "react": "^17.0.2",
+    "qs": "^6.10.3",
+    "react": "^17.0.0",
     "react-device-detect": "^2.1.2",
-    "react-dom": "^17.0.2",
+    "react-dom": "^17.0.0",
     "react-html-parser": "^2.0.2",
     "react-redux": "^7.2.6",
     "react-router-dom": "^6.2.2",
-    "react-scripts": "^2.1.3",
+    "react-scripts": "^4.0.0",
     "redux": "^4.1.2",
     "redux-promise": "^0.6.0",
     "redux-thunk": "^2.4.1",
