--- a/server/package.json
+++ b/server/package.json
@@ -19,9 +19,11 @@
     "cors": "^2.8.5",
     "dotenv": "^16.0.0",
     "express": "^4.17.3",
+    "express-session": "^1.17.2",
     "http-proxy-middleware": "^2.0.4",
     "iconv-lite": "^0.6.3",
     "jsonwebtoken": "^8.5.1",
+    "latest": "^0.2.0",
     "mime": "^3.0.0",
     "multer": "^1.4.4",
     "mysql": "^2.18.1",
