--- a/client/package.json
+++ b/client/package.json
@@ -25,6 +25,7 @@
     "emoji-regex": "^10.0.1",
     "highlight.js": "^11.5.0",
     "html-react-parser": "^1.4.9",
+    "http-proxy-middleware": "^1.3.1",
     "node-html-parser": "^5.3.3",
     "qs": "^6.10.3",
     "react": "^17.0.2",
@@ -45,6 +46,7 @@
     "test": "react-scripts test",
     "eject": "react-scripts eject"
   },
+  "proxy": "http://localhost:8000/",
   "eslintConfig": {
     "extends": [
       "react-app",
