--- a/client/package.json
+++ b/client/package.json
@@ -20,6 +20,7 @@
     "ckeditor5": "^33.0.0",
     "copy-descriptor": "^0.1.1",
     "cors": "^2.8.5",
+    "crypto-js": "^4.1.1",
     "ee-first": "^1.1.1",
     "electron-to-chromium": "^1.4.92",
     "emoji-regex": "^10.0.1",
@@ -28,6 +29,7 @@
     "node-html-parser": "^5.3.3",
     "qs": "^6.10.3",
     "react": "^17.0.2",
+    "react-cookie": "^4.1.1",
     "react-device-detect": "^2.1.2",
     "react-dom": "^17.0.2",
     "react-html-parser": "^2.0.2",
@@ -40,7 +42,7 @@
     "web-vitals": "^2.1.4"
   },
   "scripts": {
-    "start": "react-scripts --openssl-legacy-provider start",
+    "start": "react-scripts start",
     "build": "react-scripts build",
     "test": "react-scripts test",
     "eject": "react-scripts eject"
