--- a/.gitignore
+++ b/.gitignore
@@ -4,6 +4,7 @@
 /node_modules
 /.pnp
 .pnp.js
+.env
 
 # testing
 /coverage
@@ -25,6 +26,7 @@ yarn-error.log*
 
 client/node_modules
 server/node_modules
+server/config/config.env
 
 # debugger
 .vscode
