--- a/server/package.json
+++ b/server/package.json
@@ -26,7 +26,9 @@
     "multer": "^1.4.4",
     "mysql": "^2.18.1",
     "node": "^17.7.1",
-    "nodemon": "^2.0.15"
+    "nodemon": "^2.0.15",
+    "winston": "^3.6.0",
+    "winston-daily-rotate-file": "^4.6.1"
   },
   "description": ""
 }
