--- a/client/package.json
+++ b/client/package.json
@@ -24,6 +24,7 @@
     "ee-first": "^1.1.1",
     "electron-to-chromium": "^1.4.92",
     "emoji-regex": "^10.0.1",
+    "file-saver": "^2.0.5",
     "highlight.js": "^11.5.0",
     "html-react-parser": "^1.4.9",
     "http-proxy-middleware": "^1.3.1",
