--- a/client/package.json
+++ b/client/package.json
@@ -28,6 +28,7 @@
     "highlight.js": "^11.5.0",
     "html-react-parser": "^1.4.9",
     "http-proxy-middleware": "^1.3.1",
+    "leaflet": "^1.7.1",
     "node-html-parser": "^5.3.3",
     "qs": "^6.10.3",
     "react": "^17.0.2",
@@ -35,6 +36,7 @@
     "react-device-detect": "^2.1.2",
     "react-dom": "^17.0.2",
     "react-html-parser": "^2.0.2",
+    "react-leaflet": "^3.2.5",
     "react-redux": "^7.2.6",
     "react-router-dom": "^6.2.2",
     "react-scripts": "5.0.0",
