--- a/client/package.json
+++ b/client/package.json
@@ -35,6 +35,7 @@
     "react-device-detect": "^2.1.2",
     "react-dom": "^17.0.2",
     "react-html-parser": "^2.0.2",
+    "react-leaflet": "^3.2.5",
     "react-redux": "^7.2.6",
     "react-router-dom": "^6.2.2",
     "react-scripts": "5.0.0",
