--- a/client/package.json
+++ b/client/package.json
@@ -7,6 +7,7 @@
     "@ckeditor/ckeditor5-build-classic": "^33.0.0",
     "@ckeditor/ckeditor5-code-block": "^33.0.0",
     "@ckeditor/ckeditor5-font": "^33.0.0",
+    "@ckeditor/ckeditor5-link": "^34.0.0",
     "@ckeditor/ckeditor5-react": "^4.0.0",
     "@emotion/react": "^11.8.2",
     "@emotion/styled": "^11.8.1",
